# valex-notifier

./: Cargo.toml  LICENCE-APACHE  README.md
proc/: Cargo.toml
proc/src/: lib.rs
proc/src/event/: mod.rs
proc/src/notifier/: mod.rs
proc/src/rpc/: mod.rs  parse.rs
proc/src/service/: data.rs
src/: calc.rs  lib.rs  main  metadata.rs  service.rs
src/pubsub/: mod.rs
src/rpc/: mod.rs  traits.rs
valex-utils/: Cargo.toml
valex-utils/proc/: Cargo.toml
valex-utils/src/: lib.rs
